--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -13,7 +13,7 @@ twitter: 'false'
 
 # Contact (edit or remove options as required)
 
-email: sidonaldson@health.ucsd.edu
+email: scottdon@usc.edu
 phone: 909.702.4244
 
 # Site header
