--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-title: PERMA+4 Lab # Website name
+title: PERMA+4 Collaborative # Website name
 baseurl: '' # Website URL
 copyright: '© 2023 Donaldson and Associates' # Footer text, e.g. '© {year} Me'
 
